--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "next": "^12.1.1",
+    "next-auth": "^4.3.1",
     "next-themes": "^0.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
