--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.2",
+    "@mui/styles": "^5.5.1",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "next": "^12.1.1",
