--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mui/styles": "^5.5.1",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
+    "axios": "^0.26.1",
     "next": "^12.1.1",
     "next-auth": "^4.3.1",
     "next-themes": "^0.1.1",
