--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
     "next": "^12.1.1",
     "next-auth": "^4.3.1",
     "next-themes": "^0.1.1",
