--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "^17.0.43",
     "axios": "^0.26.1",
     "dotenv": "^16.0.0",
+    "express": "^4.17.3",
     "mssql": "^8.0.2",
     "next": "^12.1.1",
     "next-auth": "^4.3.1",
