--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "axios": "^0.26.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "mssql": "^8.0.2",
