--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.2",
     "@mui/styles": "^5.5.1",
+    "@types/mssql": "^7.1.5",
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "axios": "^0.26.1",
